# rust_db

./: Cargo.toml  README.md  config.toml  default_config.toml  tech.md
benches/: dummy_load_server.rs  kvb.rs  reporter.rs
benches/workloads/: get_heavy.rs  mixed.rs  mod.rs  set_heavy.rs
proto/: kvstore.proto
src/: config.rs  install-kvstore-service.sh  kvstore-plus-plus.service  lib.rs  main.rs  server.rs
src/api/: auth_middleware.rs  error.rs  mod.rs
src/api/grpc/: mod.rs
src/api/rest/: handler.rs  mod.rs  types.rs
src/auth/: apikey.rs  audit.rs  jwt.rs  manager.rs  mod.rs  types.rs
src/background/: checkpoint.rs  metrics.rs  mod.rs  replica.rs  s3_uploader.rs  types.rs
src/catalog/: bootstrap.rs  error.rs  manager.rs  mod.rs  types.rs
src/connection/: config.rs  manager.rs  metrics.rs  mod.rs  types.rs
src/ctl/: client.rs  mod.rs  types.rs
src/ctl/commands/: keys.rs  mod.rs  snapshot.rs  user.rs  wal.rs
src/storage/: engine.rs  error.rs  mod.rs  shard.rs  snapshot.rs  ttl.rs  types.rs
src/wal/: config.rs  entry.rs  error.rs  manager.rs  mod.rs
tests/: integration.rs
