[package]
name = "rust_db"
version = "0.1.0"
edition = "2021"  # ← Rust 2024 is not stable yet — use 2021

[dependencies]
# Core
tokio = { version = "1.30", features = [
    "full",
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
    "fs",
    "signal"
] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["codec"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
uuid = { version = "1.0", features = ["v4"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
lazy_static = "1.4"

# Concurrency
dashmap = "5.0"
parking_lot = "0.12"

# WAL
crc32fast = "1.3"
bytes = "1.5"

# Storage
bincode = "1.3"

# Catalog & Auth
scrypt = { version = "0.11", features = ["simple"] }
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "8.3"

# API Layer
axum = "0.7"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["full", "trace", "cors"] }
http = "1.0"
tonic = "0.11"
prost = "0.12"
tower_governor = "0.8.0"

# Background Workers
aws-sdk-s3 = "1.0"
aws-config = "1.0"
prometheus = "0.13"

# CLI Tool (kvctl)
clap = { version = "4.4", features = ["derive"] }

# Load Testing / Benchmarks
reqwest = { version = "0.11", features = ["json", "blocking"] }
csv = "1.2"
base64 = "0.21"

# Hashing (for sharding)
fxhash = "0.2"

[build-dependencies]
tonic-build = "0.11"

[[bin]]
name = "kvctl"
path = "src/bin/kvctl.rs"

[[bin]]
name = "kvb"
path = "benches/kvb.rs"

[[bin]]
name = "dummy-load-server"
path = "benches/dummy_load_server.rs"